# financial-decision-ai

./: .gitignore  app.py  config.yaml  domain_note.txt  main.py  pyproject.toml
src/bot/: chunker.py  config.py  database.py  ingestion.py  prompts.py  retrieval.py
